adds local storage to notes(no more test notes). Create note works on homepage, click on note to edit, click home when done. Delete note is in nav bar of editor, file.... delete note reroutes to homepage.

--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "@tiptap/extension-underline": "^2.11.7",
     "@tiptap/react": "^2.11.7",
     "@tiptap/starter-kit": "^2.11.7",
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
-    "firebase": "^11.6.0",
     "draft-js": "^0.11.7",
+    "firebase": "^11.6.0",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
-    "roughjs": "^4.6.6",
     "react-tabs": "^6.1.0",
+    "roughjs": "^4.6.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
