adds tab and audio in editor. Use file drop down to open a "new" note or "open" a previous one. Audio recordings save oustide text editor so require manual save or changes to text after.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sinm/react-chrome-tabs": "^2.4.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -20,11 +21,13 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "draft-js": "^0.11.7",
+    "expo-av": "^15.0.2",
     "firebase": "^11.6.0",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-media-recorder": "^1.7.1",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.1.0",
