--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "draft-js": "^0.11.7",
     "expo-av": "^15.0.2",
     "firebase": "^11.6.0",
+    "perfect-freehand": "^1.0.6",
     "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
